--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "sopheos/pebble_database",
     "description": "Cache library",
+    "license": "MIT",
     "require": {
         "php": ">=8.1.0"
     },
